# rtxqr

./: .gitignore  README.md
rust/qr-fountain-gen/: Cargo.toml  default_constants
rust/qr-fountain-gen/src/: lib.rs  main.rs
