[package]
name = "qr-fountain-gen"
version = "0.2.0"
authors = ["Slesarev <slesarew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
raptorq = "1.6.3"
regex = "1.4.5"
qrcodegen = "1.6.0"
apng-encoder = "0.3.0"
